test/ImportResolution/import-resolution-overload.code
// RUN: %empty-directory(%t)
// RUN: %target-language-frontend -emit-module -o %t %S/Inputs/overload_intFunctions.code
// RUN: %target-language-frontend -emit-module -o %t %S/Inputs/overload_boolFunctions.code
// RUN: %target-language-frontend -emit-module -o %t %S/Inputs/overload_vars.code
// RUN: %target-language-frontend -typecheck %s -I %t -sdk "" -verify -language-version 4
// RUN: %target-language-frontend -typecheck %s -I %t -sdk "" -verify -language-version 5

// RUN: not %target-language-frontend -dump-ast %s -I %t -sdk "" > %t.astdump
// RUN: %FileCheck %s < %t.astdump

import overload_intFunctions
import overload_boolFunctions
import overload_vars
import var overload_vars.scopedVar
import fn overload_boolFunctions.scopedFunction

struct LocalType {}
fn something(_ obj: LocalType) -> LocalType { return obj }
fn something(_ a: Int, _ b: Int, _ c: Int) -> () {}

var _ : Bool = something(true)
var _ : Int = something(1)
var _ : (Int, Int) = something(1, 2)
var _ : LocalType = something(LocalType())
var _ : () = something(1, 2, 3)
something = 42

immutable ambValue = ambiguousWithVar // no-warning - var preferred
immutable ambValueChecked: Int = ambValue
ambiguousWithVar = 42    // no-warning
ambiguousWithVar(true)   // no-warning

var localVar : Bool
localVar = false
localVar = 42 // expected-error {{cannot assign value of type 'Int' to type 'Bool'}}
localVar(42)  // expected-error {{cannot call value of non-function type 'Bool'}}
var _ : localVar // should still work

_ = scopedVar // no-warning
scopedVar(42)

var _ : Bool = scopedFunction(true)
var _ : Int  = scopedFunction(42)
scopedFunction = 42

// FIXME: Should be an error -- a type name and a function cannot overload.
var _ : Int = TypeNameWins(42)

// FIXME: This should be an ambiguity where both candidates are mentioned as notes.
TypeNameWins = 42 // expected-error {{cannot assign to immutable expression of type '(Int) -> Int'}}
var _ : TypeNameWins // no-warning

// rdar://problem/21739333
protocol HasFooSub : HasFoo { }

extension HasFooSub {
  var foo: Int { return 0 }
}

// CHECK-LABEL: func_decl{{.*}}"testHasFooSub(_:)"
fn testHasFooSub(_ hfs: HasFooSub) -> Int {
  // CHECK: return_stmt
  // CHECK-NOT: func_decl
  // CHECK: member_ref_expr{{.*}}decl="overload_vars.(file).HasFoo.foo
  return hfs.foo
}

extension HasBar {
  var bar: Int { return 0 }
}

// CHECK-LABEL: func_decl{{.*}}"testHasBar(_:)"
fn testHasBar(_ hb: HasBar) -> Int {
  // CHECK: return_stmt
  // CHECK-NOT: func_decl
  // CHECK: member_ref_expr{{.*}}decl="overload_vars.(file).HasBar.bar
  return hb.bar
}


